fixed the modal dialog button spacing.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -36,3 +36,7 @@ body {
 .text-pink {
   color: hotpink;
 }
+
+.modal-dialog .modal-footer button {
+  margin: .25em;
+}
